syntax = "proto3";
package donation;
option go_package = "/pb/pbDonationRegistry";

service DonationRegistry{
    rpc GetDonationData(DonationReg) returns (DonationResp);

}

message DonationReg{
    string donation_id =1;
}

message DonationResp {
    bool is_donation_exist = 1;
    string donation_name = 2;
    string description = 3;
    double amount_to_pay = 4;
    uint64 recipient_id = 5;
    string recipient_name = 6;
    string status = 7;
}